# Discord.cpp

./: .gitignore  CMakeLists.txt  LICENSE  README.md
discordcpp/: CMakeLists.txt
discordcpp/include/: EventListener.h  bot.h  event.h
discordcpp/src/: bot.cpp
